2015-05-04  Richard Biener  <rguenther@suse.de>

PR tree-optimization/65935
	* tree-vect-slp.c (vect_build_slp_tree): If we swapped operands
	then make sure to apply that swapping to the IL.

	* gcc.dg/vect/bb-slp-pr65935.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@222764 138bc75d-0d04-0410-961f-82ee72b054a4